--- a/TrelloSyncToVsts/packages.config
+++ b/TrelloSyncToVsts/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net46" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net46" />
-  <package id="Microsoft.Azure.Services.AppAuthentication" version="1.0.3" targetFramework="net46" />
-  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.19.8" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net461" />
+  <package id="Microsoft.Azure.Services.AppAuthentication" version="1.0.3" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.19.8" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Logging" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Tokens" version="5.2.4" targetFramework="net461" />
@@ -28,20 +28,20 @@
   <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net461" />
-  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net46" />
-  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net46" />
-  <package id="System.Runtime.Serialization.Json" version="4.3.0" targetFramework="net46" />
-  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net46" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net46" requireReinstallation="true" />
-  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net46" />
-  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net46" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net46" requireReinstallation="true" />
-  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net46" />
-  <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net46" />
-  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net46" />
-  <package id="System.Threading" version="4.3.0" targetFramework="net46" />
-  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net46" />
-  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net46" />
-  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net46" />
-  <package id="WindowsAzure.ServiceBus" version="5.0.0" targetFramework="net46" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.Serialization.Json" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net461" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
+  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net461" />
+  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
+  <package id="WindowsAzure.ServiceBus" version="5.0.0" targetFramework="net461" />
 </packages>
