[add] move cards and add comments

--- a/TrelloSyncToVsts/App.config
+++ b/TrelloSyncToVsts/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="TrelloSyncToVsts.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
@@ -29,11 +34,6 @@
       </bindingExtensions>
     </extensions>
   </system.serviceModel>
-  <appSettings>
-    <!-- Service Bus specific app setings for messaging connections -->
-    <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://[your namespace].servicebus.windows.net;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=[your secret]" />
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
-  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -86,4 +86,32 @@
       </providers>
     </roleManager>
   </system.web>
+  <applicationSettings>
+    <TrelloSyncToVsts.Properties.Settings>
+      <setting name="TrelloKey" serializeAs="String">
+        <value>TrelloKey</value>
+      </setting>
+      <setting name="TrelloToken" serializeAs="String">
+        <value>TrelloToken</value>
+      </setting>
+      <setting name="VstsUrl" serializeAs="String">
+        <value>VstsUrl</value>
+      </setting>
+      <setting name="VstsToken" serializeAs="String">
+        <value>VstsToken</value>
+      </setting>
+      <setting name="IdListFrom" serializeAs="String">
+        <value>IdListFrom</value>
+      </setting>
+      <setting name="IdListTo" serializeAs="String">
+        <value>IdListTo</value>
+      </setting>
+      <setting name="IdPbi" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="UserName" serializeAs="String">
+        <value>UserName</value>
+      </setting>
+    </TrelloSyncToVsts.Properties.Settings>
+  </applicationSettings>
 </configuration>
